@@ -21,10 +21,17 @@ package org.apache.tajo.engine.query;
 import org.apache.tajo.IntegrationTest;
 import org.apache.tajo.QueryTestCaseBase;
 import org.apache.tajo.TajoConstants;
+import org.apache.tajo.TajoTestingCluster;
+import org.apache.tajo.catalog.Schema;
+import org.apache.tajo.common.TajoDataTypes.Type;
+import org.apache.tajo.storage.StorageConstants;
+import org.apache.tajo.util.KeyValueSet;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
 
 import java.sql.ResultSet;
+
+import static org.junit.Assert.assertEquals;
 
 @Category(IntegrationTest.class)
 public class TestGroupByQuery extends QueryTestCaseBase {
@@ -253,6 +260,34 @@ public class TestGroupByQuery extends QueryTestCaseBase {
     res = executeFile("testDistinctAggregation_case8.sql");
     assertResultSet(res, "testDistinctAggregation_case8.result");
     res.close();
+
+    // case9
+    KeyValueSet tableOptions = new KeyValueSet();
+    tableOptions.put(StorageConstants.CSVFILE_DELIMITER, StorageConstants.DEFAULT_FIELD_DELIMITER);
+    tableOptions.put(StorageConstants.CSVFILE_NULL, "\\\\N");
+
+    Schema schema = new Schema();
+    schema.addColumn("id", Type.TEXT);
+    schema.addColumn("code", Type.TEXT);
+    schema.addColumn("qty", Type.INT4);
+    schema.addColumn("qty2", Type.FLOAT8);
+    String[] data = new String[]{ "1|a|3|3.0", "1|a|4|4.0", "1|b|5|5.0", "2|a|1|6.0", "2|c|2|7.0", "2|d|3|8.0" };
+    TajoTestingCluster.createTable("table10", schema, tableOptions, data);
+
+    res = executeString("select id, count(distinct code), " +
+        "avg(qty), min(qty), max(qty), sum(qty), " +
+        "cast(avg(qty2) as INT8), cast(min(qty2) as INT8), cast(max(qty2) as INT8), cast(sum(qty2) as INT8) " +
+        "from table10 group by id");
+    String result = resultSetToString(res);
+
+    String expected = "id,?count,?avg_1,?min_2,?max_3,?sum_4,?cast_5,?cast_6,?cast_7,?cast_8\n" +
+        "-------------------------------\n" +
+        "1,2,4.0,0,5,12,4,0,5,12\n" +
+        "2,3,2.0,0,3,6,7,0,8,21\n";
+
+    assertEquals(expected, result);
+
+    executeString("DROP TABLE table10 PURGE").close();
   }
 
   @Test
