@@ -1,0 +1,4 @@
+l_linenumber,?sum,?max_1,?max_2,?avg_3,?sum_4
+-------------------------------
+1,0,,,33.333333333333336,100.0
+2,0,,,42.5,85.0
